tests/neg/toplevel-cyclic/defs_1.scala
type A = B  // error: illegal cyclic reference

